added regression notebook

--- a/Classification/Titanic_survivor/web-application/templates/index.html
+++ b/Classification/Titanic_survivor/web-application/templates/index.html
@@ -18,7 +18,7 @@
 <div class="form-group">
 <table class="table">
     <tr>
-        <td width="300px"><p style="text-align:center"><h1>Chapter 3<BR>Design Your Titanic Traveler</h1></p></td>
+        <td width="300px"><p style="text-align:center"><h2>Check Your Survival<BR><h4>Design Your Titanic Traveler and check their survival !<h4> </h2></p></td>
         <td><p style="text-align:center">
 			<img src="static/images/small_titanic.jpg" alt="titanic" style='padding:1px; border:1px solid #021a40; width: 80%; height: 80%'>
 			</p>
